# 2023_1_Team96

./: CMakeLists.txt  README.md  config.json  connection.cpp  main.cpp  server.cpp  server2.cpp
include/: gameform.h
include/graphics/: graphics.hpp  sfml_monitor.hpp
include/input/: input_handler.hpp  network_input.hpp  qt_input.hpp  sfml_input.hpp
include/model/: actions.hpp  field.hpp  gamemodel.hpp  gameobject.hpp  gamestate.hpp  objectfactory.hpp  objectrepository.hpp  player.hpp
include/qt/: chooseopponentform.h  entranceform.h  gameform.h  mainwindow.h  qsfmlcanvas.hpp
include/server/: client.hpp  connection.hpp  server.hpp
include/utility/: common.h
lib/commandmanager/: CMakeLists.txt
lib/commandmanager/include/: command.hpp  commandmanager.hpp
lib/eventpp/: CMakeLists.txt
lib/model/: CMakeLists.txt
lib/model/include/: gamemodel.hpp  objectfactory.hpp
lib/qt-widgets/: CMakeLists.txt
src/: chooseopponentform.cpp  entranceform.cpp  gameform.cpp  gamemodel.cpp  gameobject.cpp
src/graphics/: sfml_monitor.cpp
src/input/: input_handler.cpp  network_input.cpp  qt_input.cpp  sfml_input.cpp
src/model/: field.cpp  gamemodel.cpp  gameobject.cpp  gamestate.cpp  objectfactory.cpp  objectrepository.cpp
src/qt/: chooseopponentform.cpp  entranceform.cpp  gameform.cpp  mainwindow.cpp  qsfmlcanvas.cpp
src/server/: client.cpp  connection.cpp  server.cpp
static/: взрыф.avif
test/: CMakeLists.txt  main.cpp  server.cpp
test/lib/server/: CMakeLists.txt
test/lib/server/src/: server.cpp
test/src/: main.cpp
test/test/: temp.cpp
testproject7/: testproject7.pro
ui/: chooseopponentform.ui  entranceform.ui  gameform.ui  mainwindow.ui
