
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)

# add_library(qt-widgets src/chooseopponentform.ui src/entranceform.ui src/gameform.ui src/mainwindow.ui)
# qt5_use_modules(qt-widgets Widgets)
# add_executable( include/chooseopponentform.h include/entranceform.h include/gameform.h include/mainwindow.h )
# target_include_directories(qt-widgets PUBLIC include)
